--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,12 @@
 
 <nav>
   <ul>
-    <li><%= link_to "Sign Up", new_user_registration_path %></li>
+    <%- if !user_signed_in? -%>
+      <li><%= link_to 'Sign Up', new_user_registration_path %></li>
+    <%- else -%>
+      <li><%= link_to 'Sign Out', '#' %></li>
+
+    <%- end -%>
   </ul>
 </nav>
 
